# ripview

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt
assets/shaders/: main.frag  main.vert
scripts/: clean-and-build.sh  run-and-build.sh
src/: camera.c  camera.h  image.c  image.h  main.c  material.c  material.h  mesh.c  mesh.h  renderer.c  renderer.h  scene.c  scene.h  scene_object.c  scene_object.h  shader.c  shader.h  transform.h  window.c  window.h
src/util/: queue.c  queue.h  tree.c  tree.h
